# mallocMC

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  .travis.yml  .yamllint  .zenodo.json  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  Usage.md
.github/workflows/: ci.yml
all/: CMakeLists.txt
alpaka/include/alpaka/atomic/: AtomicCpu.hpp
cmake/: add_controlled.cmake  package-lock.cmake  tools.cmake
examples/: CMakeLists.txt  mallocMC_example01.cpp  mallocMC_example03.cpp
examples/getAvailableSlots/: CMakeLists.txt
examples/getAvailableSlots/source/: main.cpp
examples/vectorAdd/: CMakeLists.txt
include/mallocMC/creationPolicies/: FlatterScatter.hpp  GallatinCuda.hpp  Scatter.hpp
include/mallocMC/reservePoolPolicies/: Noop.hpp
src/include/mallocMC/: allocator.hpp  auxiliary.hpp  device_allocator.hpp  mallocMC.hpp  mallocMC_constraints.hpp  mallocMC_utils.hpp  version.hpp
src/include/mallocMC/creationPolicies/: FlatterScatter.hpp  GallatinCuda.hpp  OldMalloc.hpp  Scatter.hpp
src/include/mallocMC/creationPolicies/FlatterScatter/: AccessBlock.hpp  BitField.hpp  PageInterpretation.hpp
src/include/mallocMC/creationPolicies/Scatter/: AccessBlock.hpp  BitField.hpp  DataPage.hpp  PageInterpretation.hpp  wrappingLoop.hpp
src/include/mallocMC/distributionPolicies/: Noop.hpp  XMallocSIMD.hpp
src/include/mallocMC/oOMPolicies/: BadAllocException.hpp
src/include/mallocMC/reservePoolPolicies/: AlpakaBuf.hpp  CudaSetLimits.hpp  Noop.hpp
test/: CMakeLists.txt
test/multithreaded/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/source/: AccessBlock.cpp
tests/: dimensions.cpp  policies.cpp  verify_heap.cpp  verify_heap_config.hpp
tests/thread-safety/: AccessBlock.cpp  BitField.cpp  Scatter.cpp
tests/unit/: AccessBlock.cpp  BitField.cpp  PageInterpretation.cpp  PageTable.cpp  PageTableEntry.cpp  mocks.hpp
